Fix breadcrumb alignment DATA-542

--- a/ckanext/dia_theme/fanstatic/dia_custom.css
+++ b/ckanext/dia_theme/fanstatic/dia_custom.css
@@ -6251,13 +6251,14 @@ a.tag:hover {
 }
 /* override for rua styling */
 nav .breadcrumbs {
-  margin-top: 15px;
+  margin-top: 10px;
+  line-height: 1.5em;
 }
 nav .breadcrumbs a {
   text-decoration: underline;
 }
 nav .breadcrumbs li {
-  line-height: unset;
+  line-height: inherit;
 }
 .row.wrapper {
   padding-top: 10px;
